--- a/EasyBlog/Views/Home/Index.cshtml
+++ b/EasyBlog/Views/Home/Index.cshtml
@@ -1,8 +1,66 @@
-﻿@{
+﻿@model List<Post>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!-- Featured blog post-->
+
+<div class="card mb-4">
+    <a href="#!"><img class="card-img-top post-image" src="~/img/posts/@Model[0].Image" alt="@Model[0].Image" /></a>
+    <div class="card-body">
+        <h2 class="card-title">@Model[0].Title</h2>
+        <p class="card-text">@Model[0].Description</p>
+        <a class="btn btn-primary" href="#!">Read more →</a>
+    </div>
 </div>
+<!-- Nested row for non-featured blog posts-->
+<div class="row">
+
+    <!-- Blog post-->
+    <div class="col-lg-6">
+        @for (int i = 1; i < Model.Count; i++)
+        {
+            if (i % 2 == 1)
+            {
+                <div class="card mb-4">
+                    <a href="#!"><img class="card-img-top post-image" src="~/img/posts/@Model[i].Image" alt="@Model[i].Image" /></a>
+                    <div class="card-body">
+                        <h2 class="card-title">@Model[i].Title</h2>
+                        <p class="card-text">@Model[i].Description</p>
+                        <a class="btn btn-primary" href="#!">Read more →</a>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+    <div class="col-lg-6">
+        <!-- Blog posts-->
+        @for (int i = 1; i < Model.Count; i++)
+        {
+            if (i % 2 == 0)
+            {
+                <div class="card mb-4">
+                    <a href="#!"><img class="card-img-top post-image" src="~/img/posts/@Model[i].Image" alt="@Model[i].Image" /></a>
+                    <div class="card-body">
+                        <h2 class="card-title">@Model[i].Title</h2>
+                        <p class="card-text">@Model[i].Description</p>
+                        <a class="btn btn-primary" href="#!">Read more →</a>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+</div>
+<!-- Pagination-->
+<nav aria-label="Pagination">
+    <hr class="my-0" />
+    <ul class="pagination justify-content-center my-4">
+        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+        <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+        <li class="page-item"><a class="page-link" href="#!">2</a></li>
+        <li class="page-item"><a class="page-link" href="#!">3</a></li>
+        <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+        <li class="page-item"><a class="page-link" href="#!">15</a></li>
+        <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+    </ul>
+</nav>
